fix(client index.js): FIXED. receiving client ssr Server side rendering check error. fix made for Bootstrap navbarCollapse. added js asset to client and referenced in client index js.

--- a/client/assets/scss/bootstrap/customizations/preBootstrapCustomizations.scss
+++ b/client/assets/scss/bootstrap/customizations/preBootstrapCustomizations.scss
@@ -12,28 +12,6 @@
 
 // --------------------------------------------------------------------------------------------------
 
-// cyan 2:            00EEEE
-// rosybrown 1:       FFC1C1
-// orange 1:          FFA500
-// yellow:            FFFF00
-// springgreen 1:     00EE76
-// slate gray:        C6E2FF
-// turquoise:         00F5FF
-// darkturquoise:     00CED12
-// darkolivegreen:    CAFF70
-// olive:             808000
-// salmon:            FF8C69
-// burlywood:         FFD39B
-// dodgerblue:        1E90FF
-// palevioletred:     DB7093
-// purple:            9B30FF
-// crimson:           DC143C
-// lightblue:         BFEFFF
-// lavender:          E6E6FA
-// azure:             F0FFFF
-// ivory:             FFFFF0
-// snow:              FFFAFA
-
 // Bootstraps default "$font-family-sans-serif" config:
 // $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
@@ -46,10 +24,11 @@ $fonts-url-path: '../../../fonts';
 // Override default Bootstrap "$font-family-sans-serif" setting with "Old English":
 // $font-family-sans-serif: "Old English", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
 // 
-// @font-face {
-//   font-family: 'Old English';
-//   src: url('#{$fonts-url-path}/old-english.woff2') format('woff2');
-// }
+
+@font-face {
+  font-family: 'Old English';
+  src: url('#{$fonts-url-path}/old-english.woff2') format('woff2');
+}
 
 // ------------------------------------------------
 
